Review Request 16401: JVM/GC tuning for bulk matching